# FastApi-ZKteco-fingerprint-scanner-server

./: .gitignore  README.md  alembic.ini  config.py  env.example  pyproject.toml  requirements.txt
alembic/: __init__.py  env.py
alembic/versions/: 001_initial_migration.py  __init__.py
app/: __init__.py  database_service.py  fingerprint_service.py  main.py  models.py
